Closed Bug 190790 Opened 23 years ago Closed 23 years ago

xpcom/glue/standalone/nsGREDirServiceProvider.cpp", line 300: Warning: String literal converted to char* in assignment.

Categories

(Core :: XPCOM, defect)

Sun
Solaris
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

"/export/home/timeless/mozilla/xpcom/glue/standalone/nsGREDirServiceProvider.cpp", line 300: Warning: String literal converted to char* in assignment.
Attached patch fixSplinter Review
Summary: xpcom/glue/standalone/nsGREDirServiceProvider.cpp", line 300: Warning: String literal converted to char* in assignment. → xpcom/glue/standalone/nsGREDirServiceProvider.cpp", line 300: Warning: String literal converted to char* in assignment.
Status: NEW → ASSIGNED
Attachment #112759 - Flags: superreview?(roc+moz)
Attachment #112759 - Flags: review?(dougt)
Attachment #112759 - Flags: superreview?(roc+moz) → superreview+
Attachment #112759 - Flags: review?(dougt) → review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: