Bug 190790 xpcom/glue/standalone/nsGREDirServiceProvider.cpp", line 300: Warning: String literal converted to char* in assignment. r=dougt sr=roc+mozn